--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -88,10 +88,10 @@ body{
 }
 .hero{
     display: flex;
-    margin-top: 76px;
+    margin-top: 40px;
     align-items: center;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 8rem;
+    margin-right:0;
 }
 .hero__content{
     width: 44%;
