--- a/assets/css/cart.css
+++ b/assets/css/cart.css
@@ -12,7 +12,7 @@
     text-align: left;
 }
 .cart table tr td{
-    border-bottom: 2px solid #000;
+     border-bottom: 2px solid #000;
     padding: 12px 0;
 }
 .cart table thead tr th:last-child{
@@ -29,5 +29,14 @@ i.far.fa-eye:active{
 }
 i.far.fa-heart:active{
     color: black;
+}
+.cart button{
+    margin-top: 12px;
+    height: 30px;
+    padding: 0 12px;
+    cursor: pointer;
+    border:  none;
+    border-radius: 5px;
+    
 }
 
