--- a/assets/css/cart.css
+++ b/assets/css/cart.css
@@ -1,8 +1,8 @@
 .cart{
-    width: 50%;
+    width: 70%;
     margin: auto;
     text-align: center;
-    padding-top: 30px;
+    padding-top: 10px;
 }
 .cart table{
     width: 100%;
@@ -12,8 +12,11 @@
     text-align: left;
 }
 .cart table tr td{
-     border-bottom: 2px solid #000;
+    /* border-bottom: 2px solid #000; */
     padding: 12px 0;
+}
+.cart table tr{
+    border-bottom: 2px solid #000;
 }
 .cart table thead tr th:last-child{
     text-align: right;
@@ -30,13 +33,6 @@ i.far.fa-eye:active{
 i.far.fa-heart:active{
     color: black;
 }
-.cart button{
-    margin-top: 12px;
-    height: 30px;
-    padding: 0 12px;
-    cursor: pointer;
-    border:  none;
-    border-radius: 5px;
-    
-}
+
+
 
